--- a/Lei10357.html
+++ b/Lei10357.html
@@ -43,26 +43,26 @@
     <p>Art. 10. A pessoa f&iacute;sica ou jur&iacute;dica que, por qualquer motivo, suspender o exerc&iacute;cio de atividade sujeita a controle e fiscaliza&ccedil;&atilde;o ou mudar de atividade controlada dever&aacute; comunicar a paralisa&ccedil;&atilde;o ou altera&ccedil;&atilde;o ao Departamento de Pol&iacute;cia Federal, no prazo de trinta dias a partir da data da suspens&atilde;o ou da mudan&ccedil;a de atividade.</p>
     <p>Art. 11. A pessoa f&iacute;sica ou jur&iacute;dica que exer&ccedil;a atividade sujeita a controle e fiscaliza&ccedil;&atilde;o dever&aacute; informar ao Departamento de Pol&iacute;cia Federal, no prazo m&aacute;ximo de vinte e quatro horas, qualquer suspeita de desvio de produto qu&iacute;mico a que se refere esta Lei.</p>
     <p>Art. 12. Constitui infra&ccedil;&atilde;o administrativa:</p>
-    <ul>I &ndash; deixar de cadastrar-se ou licenciar-se no prazo legal;</ul>
-    <ul>II &ndash; deixar de comunicar ao Departamento de Pol&iacute;cia Federal, no prazo de trinta dias, qualquer altera&ccedil;&atilde;o cadastral ou estatut&aacute;ria a partir da data do ato aditivo, bem como a suspens&atilde;o ou mudan&ccedil;a de atividade sujeita a controle e fiscaliza&ccedil;&atilde;o;</ul>
-    <ul>III &ndash; omitir as informa&ccedil;&otilde;es a que se refere o art. 8o desta Lei, ou prest&aacute;-las com dados incompletos ou inexatos;</ul>
-    <ul>IV &ndash; deixar de apresentar ao &oacute;rg&atilde;o fiscalizador, quando solicitado, notas fiscais, manifestos e outros documentos de controle;</ul>
-    <ul>V &ndash; exercer qualquer das atividades sujeitas a controle e fiscaliza&ccedil;&atilde;o, sem a devida Licen&ccedil;a de Funcionamento ou Autoriza&ccedil;&atilde;o Especial do &oacute;rg&atilde;o competente;</ul>
-    <ul>VI &ndash; exercer atividade sujeita a controle e fiscaliza&ccedil;&atilde;o com pessoa f&iacute;sica ou jur&iacute;dica n&atilde;o autorizada ou em situa&ccedil;&atilde;o irregular, nos termos desta Lei;</ul>
-    <ul>VII &ndash; deixar de informar qualquer suspeita de desvio de produto qu&iacute;mico controlado, para fins il&iacute;citos;</ul>
-    <ul>VIII &ndash; importar, exportar ou reexportar produto qu&iacute;mico controlado, sem autoriza&ccedil;&atilde;o pr&eacute;via;</ul>
-    <ul>IX &ndash; alterar a composi&ccedil;&atilde;o de produto qu&iacute;mico controlado, sem pr&eacute;via comunica&ccedil;&atilde;o ao &oacute;rg&atilde;o competente;</ul>
-    <ul>X &ndash; adulterar laudos t&eacute;cnicos, notas fiscais, r&oacute;tulos e embalagens de produtos qu&iacute;micos controlados visando a burlar o controle e a fiscaliza&ccedil;&atilde;o;</ul>
-    <ul>XI &ndash; deixar de informar no laudo t&eacute;cnico, ou nota fiscal, quando for o caso, em local vis&iacute;vel da embalagem e do r&oacute;tulo, a concentra&ccedil;&atilde;o do produto qu&iacute;mico controlado;</ul>
-    <ul>XII &ndash; deixar de comunicar ao Departamento de Pol&iacute;cia Federal furto, roubo ou extravio de produto qu&iacute;mico controlado e documento de controle, no prazo de quarenta e oito horas; e</ul>
-    <ul>XIII &ndash; dificultar, de qualquer maneira, a a&ccedil;&atilde;o do &oacute;rg&atilde;o de controle e fiscaliza&ccedil;&atilde;o.</ul>
+    <p>I &ndash; deixar de cadastrar-se ou licenciar-se no prazo legal;</p>
+    <p>II &ndash; deixar de comunicar ao Departamento de Pol&iacute;cia Federal, no prazo de trinta dias, qualquer altera&ccedil;&atilde;o cadastral ou estatut&aacute;ria a partir da data do ato aditivo, bem como a suspens&atilde;o ou mudan&ccedil;a de atividade sujeita a controle e fiscaliza&ccedil;&atilde;o;</p>
+    <p>III &ndash; omitir as informa&ccedil;&otilde;es a que se refere o art. 8o desta Lei, ou prest&aacute;-las com dados incompletos ou inexatos;</p>
+    <p>IV &ndash; deixar de apresentar ao &oacute;rg&atilde;o fiscalizador, quando solicitado, notas fiscais, manifestos e outros documentos de controle;</p>
+    <p>V &ndash; exercer qualquer das atividades sujeitas a controle e fiscaliza&ccedil;&atilde;o, sem a devida Licen&ccedil;a de Funcionamento ou Autoriza&ccedil;&atilde;o Especial do &oacute;rg&atilde;o competente;</p>
+    <p>VI &ndash; exercer atividade sujeita a controle e fiscaliza&ccedil;&atilde;o com pessoa f&iacute;sica ou jur&iacute;dica n&atilde;o autorizada ou em situa&ccedil;&atilde;o irregular, nos termos desta Lei;</p>
+    <p>VII &ndash; deixar de informar qualquer suspeita de desvio de produto qu&iacute;mico controlado, para fins il&iacute;citos;</p>
+    <p>VIII &ndash; importar, exportar ou reexportar produto qu&iacute;mico controlado, sem autoriza&ccedil;&atilde;o pr&eacute;via;</p>
+    <p>IX &ndash; alterar a composi&ccedil;&atilde;o de produto qu&iacute;mico controlado, sem pr&eacute;via comunica&ccedil;&atilde;o ao &oacute;rg&atilde;o competente;</p>
+    <p>X &ndash; adulterar laudos t&eacute;cnicos, notas fiscais, r&oacute;tulos e embalagens de produtos qu&iacute;micos controlados visando a burlar o controle e a fiscaliza&ccedil;&atilde;o;</p>
+    <p>XI &ndash; deixar de informar no laudo t&eacute;cnico, ou nota fiscal, quando for o caso, em local vis&iacute;vel da embalagem e do r&oacute;tulo, a concentra&ccedil;&atilde;o do produto qu&iacute;mico controlado;</p>
+    <p>XII &ndash; deixar de comunicar ao Departamento de Pol&iacute;cia Federal furto, roubo ou extravio de produto qu&iacute;mico controlado e documento de controle, no prazo de quarenta e oito horas; e</p>
+    <p>XIII &ndash; dificultar, de qualquer maneira, a a&ccedil;&atilde;o do &oacute;rg&atilde;o de controle e fiscaliza&ccedil;&atilde;o.</p>
     <p>Art. 13. Os procedimentos realizados no exerc&iacute;cio da fiscaliza&ccedil;&atilde;o dever&atilde;o ser formalizados mediante a elabora&ccedil;&atilde;o de documento pr&oacute;prio.</p>
     <p>Art. 14. O descumprimento das normas estabelecidas nesta Lei, independentemente de responsabilidade penal, sujeitar&aacute; os infratores &agrave;s seguintes medidas administrativas, aplicadas cumulativa ou isoladamente:</p>
-    <ul>I &ndash; advert&ecirc;ncia formal;</ul>
-    <ul>II &ndash; apreens&atilde;o do produto qu&iacute;mico encontrado em situa&ccedil;&atilde;o irregular;</ul>
-    <ul>III &ndash; suspens&atilde;o ou cancelamento de licen&ccedil;a de funcionamento;</ul>
-    <ul>IV &ndash; revoga&ccedil;&atilde;o da autoriza&ccedil;&atilde;o especial; e</ul>
-    <ul>V &ndash; multa de 2.128,20 (dois mil, cento e vinte e oito reais e vinte centavos) a 1.064.100,00 (um milh&atilde;o, sessenta e quatro mil e cem reais).</ul>
+    <p>I &ndash; advert&ecirc;ncia formal;</p>
+    <p>II &ndash; apreens&atilde;o do produto qu&iacute;mico encontrado em situa&ccedil;&atilde;o irregular;</p>
+    <p>III &ndash; suspens&atilde;o ou cancelamento de licen&ccedil;a de funcionamento;</p>
+    <p>IV &ndash; revoga&ccedil;&atilde;o da autoriza&ccedil;&atilde;o especial; e</p>
+    <p>V &ndash; multa de 2.128,20 (dois mil, cento e vinte e oito reais e vinte centavos) a 1.064.100,00 (um milh&atilde;o, sessenta e quatro mil e cem reais).</p>
     <p>&sect; 1o Na dosimetria da medida administrativa, ser&atilde;o consideradas a situa&ccedil;&atilde;o econ&ocirc;mica, a conduta do infrator, a reincid&ecirc;ncia, a natureza da infra&ccedil;&atilde;o, a quantidade dos produtos qu&iacute;micos encontrados em situa&ccedil;&atilde;o irregular e as circunst&acirc;ncias em que ocorreram os fatos.</p>
     <p>&sect; 2o A crit&eacute;rio da autoridade competente, o recolhimento do valor total da multa arbitrada poder&aacute; ser feito em at&eacute; cinco parcelas mensais e consecutivas.</p>
     <p>&sect; 3o Das san&ccedil;&otilde;es aplicadas caber&aacute; recurso ao Diretor-Geral do Departamento de Pol&iacute;cia Federal, na forma e prazo estabelecidos em regulamento.</p>
@@ -73,25 +73,25 @@
     <p>Art. 16. Fica institu&iacute;da a Taxa de Controle e Fiscaliza&ccedil;&atilde;o de Produtos Qu&iacute;micos, cujo fato gerador &eacute; o exerc&iacute;cio do poder de pol&iacute;cia conferido ao Departamento de Pol&iacute;cia Federal para controle e fiscaliza&ccedil;&atilde;o das atividades relacionadas no art. 1o desta Lei.</p>
     <p>Art. 17. S&atilde;o sujeitos passivos da Taxa de Controle e Fiscaliza&ccedil;&atilde;o de Produtos Qu&iacute;micos as pessoas f&iacute;sicas e jur&iacute;dicas que exer&ccedil;am qualquer uma das atividades sujeitas a controle e fiscaliza&ccedil;&atilde;o de que trata o art. 1o desta Lei.</p>
     <p>Art. 18. S&atilde;o isentos do pagamento da Taxa de Controle e Fiscaliza&ccedil;&atilde;o de Produtos Qu&iacute;micos, sem preju&iacute;zo das demais obriga&ccedil;&otilde;es previstas nesta Lei:</p>
-    <ul>I &ndash; os &oacute;rg&atilde;os da Administra&ccedil;&atilde;o P&uacute;blica direta federal, estadual e municipal;</ul>
-    <ul>II &ndash; as institui&ccedil;&otilde;es p&uacute;blicas de ensino, pesquisa e sa&uacute;de;</ul>
-    <ul>III &ndash; as entidades particulares de car&aacute;ter assistencial, filantr&oacute;pico e sem fins lucrativos que comprovem essa condi&ccedil;&atilde;o na forma da lei espec&iacute;fica em vigor.</ul>
+    <p>I &ndash; os &oacute;rg&atilde;os da Administra&ccedil;&atilde;o P&uacute;blica direta federal, estadual e municipal;</p>
+    <p>II &ndash; as institui&ccedil;&otilde;es p&uacute;blicas de ensino, pesquisa e sa&uacute;de;</p>
+    <p>III &ndash; as entidades particulares de car&aacute;ter assistencial, filantr&oacute;pico e sem fins lucrativos que comprovem essa condi&ccedil;&atilde;o na forma da lei espec&iacute;fica em vigor.</p>
     <p>Art. 19. A Taxa de Controle e Fiscaliza&ccedil;&atilde;o de Produtos Qu&iacute;micos &eacute; devida pela pr&aacute;tica dos seguintes atos de controle e fiscaliza&ccedil;&atilde;o:</p>
-    <ul>I &ndash; no valor de 500,00 (quinhentos reais) para:</ul>
-    <h3>a. emiss&atilde;o de Certificado de Registro Cadastral;</h3>
-    <h3>b. emiss&atilde;o de segunda via de Certificado de Registro Cadastral; e</h3>
-    <h3>c. altera&ccedil;&atilde;o de Registro Cadastral;</h3>
-    <ul>II &ndash; no valor de 1.000,00 (um mil reais) para:</ul>
-    <h3>a. emiss&atilde;o de Certificado de Licen&ccedil;a de Funcionamento;</h3>
-    <h3>b. emiss&atilde;o de segunda via de Certificado de Licen&ccedil;a de Funcionamento; e</h3>
-    <h3>c. renova&ccedil;&atilde;o de Licen&ccedil;a de Funcionamento;</h3>
-    <ul>III &ndash; no valor de 50,00 (cinq&uuml;enta reais) para:</ul>
-    <h3>a. emiss&atilde;o de Autoriza&ccedil;&atilde;o Especial; e</h3>
-    <h3>b. emiss&atilde;o de segunda via de Autoriza&ccedil;&atilde;o Especial.</h3>
+    <p>I &ndash; no valor de 500,00 (quinhentos reais) para:</p>
+    <p>a. emiss&atilde;o de Certificado de Registro Cadastral;</p>
+    <p>b. emiss&atilde;o de segunda via de Certificado de Registro Cadastral; e</p>
+    <p>c. altera&ccedil;&atilde;o de Registro Cadastral;</p>
+    <p>II &ndash; no valor de 1.000,00 (um mil reais) para:</p>
+    <p>a. emiss&atilde;o de Certificado de Licen&ccedil;a de Funcionamento;</p>
+    <p>b. emiss&atilde;o de segunda via de Certificado de Licen&ccedil;a de Funcionamento; e</p>
+    <p>c. renova&ccedil;&atilde;o de Licen&ccedil;a de Funcionamento;</p>
+    <p>III &ndash; no valor de 50,00 (cinq&uuml;enta reais) para:</p>
+    <p>a. emiss&atilde;o de Autoriza&ccedil;&atilde;o Especial; e</p>
+    <p>b. emiss&atilde;o de segunda via de Autoriza&ccedil;&atilde;o Especial.</p>
     <p>Par&aacute;grafo &uacute;nico. Os valores constantes dos incisos I e II deste artigo ser&atilde;o reduzidos de:</p>
-    <ul>I - quarenta por cento, quando se tratar de empresa de pequeno porte;</ul>
-    <ul>II - cinq&uuml;enta por cento, quando se tratar de filial de empresa j&aacute; cadastrada;</ul>
-    <ul>III - setenta por cento, quando se tratar de microempresa.</ul>
+    <p>I - quarenta por cento, quando se tratar de empresa de pequeno porte;</p>
+    <p>II - cinq&uuml;enta por cento, quando se tratar de filial de empresa j&aacute; cadastrada;</p>
+    <p>III - setenta por cento, quando se tratar de microempresa.</p>
     <p>Art. 20. A Taxa de Controle e Fiscaliza&ccedil;&atilde;o de Produtos Qu&iacute;micos ser&aacute; recolhida nos prazos e nas condi&ccedil;&otilde;es estabelecidas em ato do Departamento de Pol&iacute;cia Federal.</p>
     <p>Art. 21. Os recursos relativos &agrave; cobran&ccedil;a da Taxa de Controle e Fiscaliza&ccedil;&atilde;o de Produtos Qu&iacute;micos, &agrave; aplica&ccedil;&atilde;o de multa e &agrave; aliena&ccedil;&atilde;o de produtos qu&iacute;micos previstas nesta Lei constituem receita do Fundo Nacional Antidrogas &ndash; FUNAD.</p>
     <p>Par&aacute;grafo &uacute;nico. O Fundo Nacional Antidrogas destinar&aacute; oitenta por cento dos recursos relativos &agrave; cobran&ccedil;a da Taxa, &agrave; aplica&ccedil;&atilde;o de multa e &agrave; aliena&ccedil;&atilde;o de produtos qu&iacute;micos, referidos no caput deste artigo, ao Departamento de Pol&iacute;cia Federal, para o reaparelhamento e custeio das atividades de controle e fiscaliza&ccedil;&atilde;o de produtos qu&iacute;micos e de repress&atilde;o ao tr&aacute;fico il&iacute;cito de drogas.</p>
